--- a/app/src/main/res/layout/activity_x.xml
+++ b/app/src/main/res/layout/activity_x.xml
@@ -31,13 +31,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/saveid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:text="保存当前xml"
-        android:onClick="saveXmlToLocal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/getActivity" />
     <TextView
